tests/baselines/reference/privateNameBadSuper.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameBadSuper.ts(4,5): error TS2376: A 'super' call must be the first statement in the constructor when a class contains initialized properties, parameter properties, or private identifiers.


==== tests/cases/conformance/classes/members/privateNames/privateNameBadSuper.ts (1 errors) ====
    class B {};
    class A extends B {
        #x;
        constructor() {
        ~~~~~~~~~~~~~~~
            void 0; // Error: 'super' call must  come first
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor when a class contains initialized properties, parameter properties, or private identifiers.
    }